@@ -4310,7 +4310,8 @@ the following cases (the . shows the point position):
  (defparameter n.ame ...)                -> (:defparameter name)
  (defconstant n.ame ...)                 -> (:defconstant name)
  (defclass n.ame ...)                    -> (:defclass name)
-
+ (defstruct n.ame ...)                   -> (:defstruct name)
+ (defpackage n.ame ...)                  -> (:defpackage name)
 For other contexts we return the symbol at point."
   (let ((name (slime-symbol-at-point)))
     (if name
@@ -4365,6 +4366,11 @@ For other contexts we return the symbol at point."
           ((slime-in-expression-p '(defparameter *)) `(:defparameter ,name))
           ((slime-in-expression-p '(defconstant *))  `(:defconstant ,name))
           ((slime-in-expression-p '(defclass *))     `(:defclass ,name))
+          ((slime-in-expression-p '(defpackage *))   `(:defpackage ,name))
+          ((slime-in-expression-p '(defstruct *))
+           `(:defstruct ,(if (consp name)
+                             (car name)
+                             name)))
           (t 
            name))))
 
@@ -6548,8 +6554,11 @@ was called originally."
                  (format "#'%s" symbol))
                 (((:defparameter :defvar :defconstant) symbol)
                  (format "'%s" symbol))
-                ((:defclass symbol)
+                (((:defclass :defstruct) symbol)
                  (format "(find-class '%s)" symbol))
+                ((:defpackage symbol)
+                 (format "(or (find-package '%s) (error \"Package %s not found\"))"
+                         symbol symbol))
                 (t
                  (error "Not in a definition"))))))
     (slime-eval-async `(swank:init-inspector ,form) 'slime-open-inspector)))
